PNA-24: move backend auth flow to HttpOnly access-token cookies
